fixing dark mode styles pt 2

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -214,6 +214,6 @@
 	}
 
 	.skill {
-		background-color: $blue-grey;
+		background-color: $light-blue-grey;
 	}
 }
