--- a/src/styles/CollapsibleSection.module.scss
+++ b/src/styles/CollapsibleSection.module.scss
@@ -11,7 +11,6 @@
 	align-items: center;
 	background: $white;
 	border: none;
-	border-bottom: 1px solid #dee2e6;
 	cursor: pointer;
 	display: flex;
 	flex-direction: row;
@@ -19,11 +18,14 @@
 	padding: 15px;
 	width: 100%;
 	height: 100%;
+	transition: background 0.5s ease-in-out;
 }
 
 .collapsibleDetails {
 	padding: 15px;
 	background: $white;
+	border-top: 1px solid #dee2e6;
+	transition: background 0.5s ease-in-out;
 }
 
 .arrow {
@@ -43,5 +45,28 @@
 		& {
 			max-height: 385px;
 		}
+	}
+}
+
+.dark {
+	.CollapsibleSection {
+		box-shadow: 0px 0px 2px 0px $d-shadow;
+	}
+
+	.collapsibleDetails {
+		border-top: 0.8px solid $off-white;
+	}
+
+	.collapsibleDetails,
+	.collapsibleSummary {
+		background: $blue-grey;
+	}
+
+	.arrow {
+		color: $off-white;
+	}
+
+	.summaryTitle {
+		color: $off-white;
 	}
 }
